@@ -5,14 +5,16 @@ import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-import com.warehouse.delivery.domain.enumeration.DeliveryStatus;
 import com.warehouse.delivery.domain.model.Delivery;
 import com.warehouse.delivery.domain.model.DeliveryRequest;
 import com.warehouse.delivery.domain.model.DeliveryResponse;
 import com.warehouse.delivery.domain.model.DeliveryRouteRequest;
+import com.warehouse.delivery.domain.port.secondary.ParcelStatusControlChangeServicePort;
 import com.warehouse.delivery.domain.port.secondary.RouteLogServicePort;
 import com.warehouse.delivery.domain.service.DeliveryService;
 
+import com.warehouse.delivery.domain.vo.UpdateStatusParcelRequest;
+import com.warehouse.delivery.infrastructure.adapter.secondary.api.UpdateStatus;
 import lombok.AllArgsConstructor;
 
 @AllArgsConstructor
@@ -21,25 +23,27 @@ public class DeliveryPortImpl implements DeliveryPort {
     private final DeliveryService deliveryService;
 
     private final RouteLogServicePort logServicePort;
+    
+    private final ParcelStatusControlChangeServicePort parcelStatusControlChangeServicePort;
 
     @Override
     public List<DeliveryResponse> deliver(List<DeliveryRequest> deliveryRequest) {
         final Set<DeliveryRequest> deliveryRequests = deliveryRequest.stream()
                 .filter(Objects::nonNull)
-                .map(this::determineDeliveryStatus)
+                .peek(DeliveryRequest::updateDeliveryStatus)
                 .collect(Collectors.toSet());
 
-        final List<Delivery> deliveries = deliveryRequests.stream()
-                .map(this::mapToDelivery)
-                .toList();
-
-        final List<Delivery> signedDeliveries = deliveryService.save(deliveries);
+        final List<Delivery> signedDeliveries = deliveryService.save(deliveryRequests);
 
         registerDeliveryRoute(signedDeliveries);
 
-        return signedDeliveries.stream()
+        final List<DeliveryResponse> deliveryResponses = signedDeliveries.stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
+        
+        updateParcelStatus(deliveryResponses);
+        
+        return deliveryResponses;
     }
 
     private void registerDeliveryRoute(List<Delivery> signedDeliveries) {
@@ -48,6 +52,18 @@ public class DeliveryPortImpl implements DeliveryPort {
                 .collect(Collectors.toSet());
 
         logServicePort.deliver(deliveryRouteRequests);
+    }
+    
+    private void updateParcelStatus(List<DeliveryResponse> deliveryResponses) {
+        deliveryResponses.forEach(this::updateParcelStatus);
+    }
+    
+    private void updateParcelStatus(DeliveryResponse deliveryResponse) {
+		final UpdateStatus updateStatus = parcelStatusControlChangeServicePort
+				.updateParcelStatus(new UpdateStatusParcelRequest(deliveryResponse.getParcelId()));
+        
+        deliveryResponse.updateStatus(updateStatus);
+
     }
 
     private DeliveryRouteRequest mapToDeliveryRouteRequest(Delivery delivery) {
@@ -61,26 +77,11 @@ public class DeliveryPortImpl implements DeliveryPort {
                 .build();
     }
 
-
-    private DeliveryRequest determineDeliveryStatus(DeliveryRequest deliveryRequest) {
-        deliveryRequest.setDeliveryStatus(DeliveryStatus.DELIVERY);
-        return deliveryRequest;
-    }
-
     private DeliveryResponse mapToResponse(Delivery delivery) {
         return DeliveryResponse.builder()
                 .id(delivery.getId())
                 .parcelId(delivery.getParcelId())
                 .deliveryStatus(delivery.getDeliveryStatus().name())
-                .build();
-    }
-
-    private Delivery mapToDelivery(DeliveryRequest request) {
-        return Delivery.builder()
-                .deliveryStatus(request.getDeliveryStatus())
-                .supplierCode(request.getSupplierCode())
-                .depotCode(request.getDepotCode())
-                .parcelId(request.getParcelId())
                 .build();
     }
 }
